--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "babel-eslint": "^10.1.0",
     "D": "^1.0.0",
-    "eslint-plugin-babel": "^5.3.1",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
     "next-themes": "^0.2.1",
@@ -35,9 +33,23 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint": "8.24.0",
+    "eslint-config-next": "^12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^4.3.8",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "typescript": "4.8.3"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
